--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.cinemachine": "2.3.4",
+    "com.unity.device-simulator": "2.2.4-preview",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
